@@ -1,7 +1,7 @@
 ﻿########################################################
 # girlfriendvideos VideoPortal
 ########################################################
-start=http://www.girlfriendvideos.com/
+start=http://www.girlfriendvideos.com
 catcher=gfvideos.com
 ########################################################
 # Videos
@@ -36,10 +36,10 @@ url=http://www.girlfriendvideos.com/categories.php
 ########################################################
 item_infos=<a href="([^"]+php)">Next Page</a>
 item_order=url
-item_skill=space|lock
+item_skill=space|striptoslash
 item_info_name=title
 item_info_build=video.devil.locale|30103
 item_info_name=icon
 item_info_build=video.devil.image|next.png
-item_url_build=http://www.girlfriendvideos.com/%s
+item_url_build=%s
 ########################################################
