@@ -1,57 +1,62 @@
 ﻿########################################################
-# RedTube VideoPortal
+# madthumbs VideoPortal
 ########################################################
-start=http://redtube.com/channels
-header=Cookie|pp=1
-catcher=redtube.com
+start=http://www.madthumbs.com/videos/browse?s=
+catcher=madthumbs.com
 ########################################################
 # Videos
 ########################################################
-item_infos=<a href="(http://www.redtube.com/\d+)" title=.+?img title="([^"]+)".+?src="([^"]+)".+?<span class="d">([^<]+)<
-item_order=url|title|icon|title.append
+item_infos=class="scrub_thumb" src="([^"]+)".+?<h1 class="mtitle" title="([^"]+)"><a href="([^"]+)".+?al fl">([^<]+)<
+item_order=icon|title|url|title.append
 item_info_name=title.append
 item_info_build= (%s)
 item_info_name=type
 item_info_build=video
-item_url_build=%s
+item_url_build=http://www.madthumbs.com%s
 ########################################################
 # Categories
 ########################################################
-item_infos=<a href="(/redtube[^']+)" title="([^']+)">.+?src="([^']+jpg)"
+item_infos=<a href="(/categories/[^"]+)"><img class="cat_thumb" title="([^"]+)" src="([^"]+)
 item_order=url|title|icon
 item_skill=rss
 item_info_name=title
 item_info_build=video.devil.locale|30100
-item_info_build=%s
-item_url_build=http://redtube.com%s
+item_url_build=http://www.madthumbs.com%s
+########################################################
+# Sorting
+########################################################
+item_infos=<a href="(/videos/browse[^"]+)" class="subfilter" id="[^"]+sort">([^"]+)</a>
+item_order=url|title
+item_skill=directory
+item_curr=class="active subfilter" id="[^"]+">([^"]+)</a>
+item_info_name=title
+item_info_build=video.devil.locale|30109
+item_info_name=icon
+item_info_build=video.devil.image|face_kiss.png
+item_url_build=http://www.madthumbs.com%s
+########################################################
+# Direct Links
+########################################################
+title=video.devil.locale|30100
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.madthumbs.com/categories
 ########################################################
 # Next
 ########################################################
-item_infos=id="navNext".+?href="([^"]+)"
+item_infos="([^"]+)">next
 item_order=url
 item_skill=space|lock
 item_info_name=title
 item_info_build=video.devil.locale|30103
 item_info_name=icon
 item_info_build=video.devil.image|next.png
-item_url_build=%s
-########################################################
-# Direct Links
-########################################################
-title= New Videos 
-type=once
-icon=video.devil.image|face_kiss.png
-url=http://redtube.com/new
-########################################################
-title= Top Rated 
-type=once
-icon=video.devil.image|face_devil_grin.png
-url=http://redtube.com/top
+item_url_build=http://www.madthumbs.com%s
 ########################################################
 # Search
 ########################################################
 title=video.devil.locale|30102
 type=search
 icon=video.devil.image|search.png
-url=http://redtube.com/?search=%s
+url=http://www.madthumbs.com/search?q=%s
 ########################################################
