@@ -2,74 +2,27 @@
 # Shufuni VideoPortal
 ########################################################
 start=http://www.shufuni.com/Category/
-catcher=downloadshufunivideos.com
+catcher=shufuni.com
 ########################################################
 # Videos
 ########################################################
-item_infos=<a class="lnkImgBorder" href="/([^"]+)".+?>[^<]+<IMG class='[^']+' type='[^']+' num='[^']+' id='[^']+' alt='([^']+)' SRC='([^\']+)' height[^>]+>.+?<td align=".+?">.+?(\d\d:\d\d).+?</td>
-item_order=url|title|icon|title.append
+item_infos=HomepageblockOneImage.+?"TimeVideo">.+?(\d\d:\d\d)</div>.+?a href="/([^"]+)".+?title="([^"]+)".+?(http://mediaimg[^"]+)"
+item_order=title.append|url|title|icon
 item_info_name=title.append
 item_info_build= (%s)
 item_info_name=type
 item_info_build=video
 item_url_build=http://www.shufuni.com/%s
 ########################################################
-#item_infos=href="([^/][^"]+)">[^<]+<IMG class='[^']+' type='[^']+' num='[^']+' id='[^']+' alt='([^']+)' SRC='([^\']+)' height[^>]+>
-#item_order=url|title|icon
-#item_info_name=type
-#item_info_build=video
-#item_url_build=http://www.shufuni.com/%s
-########################################################
 # Categories
 ########################################################
-item_infos=<a class=".+?" href="/videos/\?(ct=[^"]+)" title="[^"]+[^>]+>([^<]+)
-item_order=url|title
-item_info_name=icon
-item_info=%s[^>]+>[^<]+<img +id="[^"]+" type="[^"]+" num="[^"]+".*?src="([^"]+)
-item_info_default=video.devil.image|face_kiss.png
-item_info_build=http://www.shufuni.com%s
-item_url_build=http://www.shufuni.com/videos/?%s
-########################################################
-item_infos=<a class=".+?".*?id="ct[^"]+" href="([^"]+)[^>]+>([^<]+)</a>
-item_order=url|title
-item_skill=directory
-item_curr=/>[^<]+<a class="def\_f127".*?id="ct[^"]+" href="[^"]+[^>]+>([^<]+)</a>
-item_info_name=title
-item_info_build=video.devil.locale|30100
-item_info_name=icon
-item_info_build=video.devil.image|face_devil_grin.png
+item_infos=<div class="oneCategoryWrap">.+?href="(/videos/\?ct=[^"]+)".+?title="([^"]+)">.+?img src="([^"]+)"
+item_order=url|title|icon
 item_url_build=http://www.shufuni.com%s
-########################################################
-# Subcategories
-########################################################
-item_infos=<a href="\?(ct=[^"]+)" id="ctl00\_cphBody\_Uc\_OrderBy\_[^"]+" class="def_f[^"]+">([^<]+)</a>
-item_order=url|title
-item_skill=directory
-item_info_name=title
-item_info_build=video.devil.locale|30109
-item_info_name=icon
-item_info_build=video.devil.image|face_kiss.png
-item_url_build=http://www.shufuni.com/videos/?%s
-########################################################
-item_infos=<a href="(\?search=[^"]+)" id="ctl00_cphBody_Link." class="def_f124">([^<]+)</a>
-item_order=url|title
-item_skill=directory
-item_info_name=title
-item_info_build=video.devil.locale|30109
-item_info_name=icon
-item_info_build=video.devil.image|face_kiss.png
-item_url_build=http://www.shufuni.com/SearchResult.aspx%s
-########################################################
-# Direct Links
-########################################################
-title= New Videos
-type=rss
-icon=video.devil.image|face_kiss.png
-url=http://www.shufuni.com/
 ########################################################
 # Next
 ########################################################
-item_infos=<a class="paging" href="(\?ct=[^"]+)"><b class="nextendprev">Next
+item_infos='activePage'>\d{1,3}</a><a class='' href=([^>]+)>
 item_order=url
 item_skill=space|lock
 item_info_name=title
@@ -77,38 +30,11 @@ item_info_build=video.devil.locale|30103
 item_info_name=icon
 item_info_build=video.devil.image|next.png
 item_url_build=http://www.shufuni.com/videos/%s
-########################################################
-item_infos=<a class='paging' href=(\?ct=[^>]+)><b class='nextendprev'>Next
-item_order=url
-item_skill=space|lock
-item_info_name=title
-item_info_build=video.devil.locale|30103
-item_info_name=icon
-item_info_build=video.devil.image|next.png
-item_url_build=http://www.shufuni.com/videos/%s
-########################################################
-item_infos=<a class="paging" href="(\?search=[^"]+)"><b class="nextendprev">Next
-item_order=url
-item_skill=space|lock
-item_info_name=title
-item_info_build=video.devil.locale|30103
-item_info_name=icon
-item_info_build=video.devil.image|next.png
-item_url_build=http://www.shufuni.com/SearchResult.aspx%s
-########################################################
-item_infos=<a class='paging' href=(\?search=[^>]+)><b class='nextendprev'>Next
-item_order=url
-item_skill=space|lock
-item_info_name=title
-item_info_build=video.devil.locale|30103
-item_info_name=icon
-item_info_build=video.devil.image|next.png
-item_url_build=http://www.shufuni.com/SearchResult.aspx%s
 ########################################################
 # Search
 ########################################################
 title=video.devil.locale|30102
 type=search
 icon=video.devil.image|search.png
-url=http://www.shufuni.com/SearchResult.aspx?search=%s
+url=http://www.shufuni.com/SearchResult.aspx?go=mini&search=%s
 ########################################################
